tests/transpiler/x/zig/pure_fold.zig
// Generated by Mochi Zig transpiler on 2025-07-20 09:42 +0000
const std = @import("std");

fn triple(x: i64) i64 {
    return x * 3;
}

pub fn main() void {
    std.debug.print("{any}\n", .{triple(1 + 2)});
}
